[workspace]
members = [
    "dfly-common",
    "dfly-core",
    "dfly-facade",
    "dfly-transaction",
    "dfly-storage",
    "dfly-replication",
    "dfly-cluster",
    "dfly-search",
    "dfly-tiering",
    "dfly-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
thiserror = "2.0.17"
googletest = "0.14.2"
rstest = "0.26.1"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
