[package]
name = "dfly-core"
version.workspace = true
edition.workspace = true

[dependencies]
dfly-common = { path = "../dfly-common" }
dfly-cluster = { path = "../dfly-cluster" }
tokio = { workspace = true }

[dev-dependencies]
googletest = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
