[package]
name = "dfly-replication"
version.workspace = true
edition.workspace = true

[dependencies]
dfly-common = { path = "../dfly-common" }
dfly-transaction = { path = "../dfly-transaction" }

[dev-dependencies]
googletest = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
